--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+"spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=BankAccountDB
+#spring.application.name= account-service
+
+#server.port = 8083
+
+customers.service.url=http://localhost:8081
+products.service.url=http://localhost:8082
+transactions.service.url=http://localhost:8084
