--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@
 customers.service.url=http://localhost:8081
 products.service.url=http://localhost:8082
 transactions.service.url=http://localhost:8084
+banks.service.url=http://localhost:8085
