Funcionando 120324 - sin gateway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-"spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=BankAccountDB
 #spring.application.name= account-service
@@ -10,3 +10,5 @@ customers.service.url=http://localhost:8081
 products.service.url=http://localhost:8082
 transactions.service.url=http://localhost:8084
 banks.service.url=http://localhost:8085
+
+gateway.service.url=http://localhost:8090
